--- a/4DSTEM Explorer/Base.lproj/Main.storyboard
+++ b/4DSTEM Explorer/Base.lproj/Main.storyboard
@@ -302,23 +302,108 @@
                         <rect key="contentRect" x="196" y="240" width="632" height="368"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                         <value key="minSize" type="size" width="624" height="378"/>
+                        <toolbar key="toolbar" implicitIdentifier="80BD8C4F-3176-4826-B4FA-C2E7983177F0" autosavesConfiguration="NO" displayMode="iconAndLabel" sizeMode="regular" id="j3l-gq-hi9">
+                            <allowedToolbarItems>
+                                <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="hNR-kT-Ut2"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="PnO-OF-hoM"/>
+                                <toolbarItem implicitItemIdentifier="1E13F056-A791-4648-B17F-8974F18220E4" label="Scale" paletteLabel="Scale" tag="1" id="5hy-xn-GKI">
+                                    <nil key="toolTip"/>
+                                    <size key="minSize" width="50" height="22"/>
+                                    <size key="maxSize" width="96" height="22"/>
+                                    <textField key="view" verticalHuggingPriority="750" tag="1" id="wgz-pS-AtU">
+                                        <rect key="frame" x="0.0" y="14" width="96" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Kgu-9C-A9A">
+                                            <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="percent" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" id="7Tw-dT-Ezf">
+                                                <integer key="multiplier" value="100"/>
+                                            </numberFormatter>
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                        <connections>
+                                            <action selector="zoomInOut:" target="Oky-zY-oP4" id="v8V-vh-fD7"/>
+                                        </connections>
+                                    </textField>
+                                </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="20B98623-F45E-4539-82AF-EE031FFABBF0" label="Zoom" paletteLabel="Zoom" id="0Sf-c6-hli">
+                                    <nil key="toolTip"/>
+                                    <size key="minSize" width="67" height="24"/>
+                                    <size key="maxSize" width="75" height="27"/>
+                                    <segmentedControl key="view" verticalHuggingPriority="750" id="KPk-J2-Smd">
+                                        <rect key="frame" x="0.0" y="14" width="75" height="27"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <segmentedCell key="cell" borderStyle="border" alignment="left" style="separated" trackingMode="momentary" id="c2m-pD-kNM">
+                                            <font key="font" metaFont="system"/>
+                                            <segments>
+                                                <segment image="NSRemoveTemplate" width="32"/>
+                                                <segment image="NSAddTemplate" width="32" tag="1"/>
+                                            </segments>
+                                        </segmentedCell>
+                                        <connections>
+                                            <action selector="zoomInOut:" target="Oky-zY-oP4" id="XPx-C4-QCA"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="132F407B-EC77-4CCF-A6BC-6C046BA29F54" label="Selection" paletteLabel="Selection" id="w8H-Sz-fPd">
+                                    <nil key="toolTip"/>
+                                    <size key="minSize" width="42" height="24"/>
+                                    <size key="maxSize" width="66" height="27"/>
+                                    <segmentedControl key="view" verticalHuggingPriority="750" springLoaded="YES" id="4T9-rf-RxN">
+                                        <rect key="frame" x="0.0" y="14" width="66" height="27"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <segmentedCell key="cell" borderStyle="border" alignment="left" style="separated" trackingMode="selectOne" id="azK-Nh-VfB">
+                                            <font key="font" metaFont="system"/>
+                                            <segments>
+                                                <segment image="NSActionTemplate" width="32"/>
+                                                <segment image="NSBluetoothTemplate">
+                                                    <nil key="label"/>
+                                                </segment>
+                                            </segments>
+                                        </segmentedCell>
+                                    </segmentedControl>
+                                </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="B488A801-1C75-405B-ADD6-B25EB47A88F6" label="Export" paletteLabel="Export" image="NSShareTemplate" id="EST-iI-ueC">
+                                    <nil key="toolTip"/>
+                                    <size key="minSize" width="40" height="32"/>
+                                    <size key="maxSize" width="43" height="32"/>
+                                    <button key="view" verticalHuggingPriority="750" id="klj-sV-yI1">
+                                        <rect key="frame" x="0.0" y="14" width="43" height="32"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <buttonCell key="cell" type="push" bezelStyle="rounded" image="NSShareTemplate" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0de-NP-hEx">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                    </button>
+                                </toolbarItem>
+                            </allowedToolbarItems>
+                            <defaultToolbarItems>
+                                <toolbarItem reference="EST-iI-ueC"/>
+                                <toolbarItem reference="PnO-OF-hoM"/>
+                                <toolbarItem reference="w8H-Sz-fPd"/>
+                                <toolbarItem reference="0Sf-c6-hli"/>
+                                <toolbarItem reference="5hy-xn-GKI"/>
+                            </defaultToolbarItems>
+                        </toolbar>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="pcu-i3-dtq"/>
                         </connections>
                     </window>
                     <connections>
+                        <outlet property="scaleField" destination="wgz-pS-AtU" id="GGz-ur-RdD"/>
                         <outlet property="window" destination="IQv-IB-iLA" id="00i-Ce-527"/>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <userDefaultsController representsSharedInstance="YES" id="P2e-bB-Hve"/>
             </objects>
             <point key="canvasLocation" x="198" y="280"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="_DSTEM_Explorer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ImageRightClickController" id="XfG-lQ-9wD" customClass="ViewController" customModule="_DSTEM_Explorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="708" height="487"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -427,7 +512,7 @@
                                     </connections>
                                 </segmentedCell>
                             </segmentedControl>
-                            <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" allowsMagnification="YES" maxMagnification="20" usesPredominantAxisScrolling="NO" scrollerKnobStyle="dark" translatesAutoresizingMaskIntoConstraints="NO" id="LG6-QM-bRM">
+                            <scrollView canDrawConcurrently="YES" fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" allowsMagnification="YES" maxMagnification="20" usesPredominantAxisScrolling="NO" scrollerKnobStyle="dark" translatesAutoresizingMaskIntoConstraints="NO" id="LG6-QM-bRM">
                                 <rect key="frame" x="297" y="0.0" width="411" height="487"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <clipView key="contentView" autoresizesSubviews="NO" ambiguous="YES" id="uLd-GI-Ws8" customClass="CenteringClipView" customModule="_DSTEM_Explorer" customModuleProvider="target">
@@ -458,11 +543,11 @@
                                     </constraints>
                                     <color key="backgroundColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
-                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="YC2-gV-1f1">
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="YC2-gV-1f1">
                                     <rect key="frame" x="1" y="470" width="409" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="m9b-H1-NYG">
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="m9b-H1-NYG">
                                     <rect key="frame" x="394" y="1" width="16" height="485"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
@@ -567,5 +652,45 @@
             </objects>
             <point key="canvasLocation" x="723.5" y="914"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="HnF-TG-5LW">
+            <objects>
+                <viewController storyboardIdentifier="ImageRightClickController" id="H5p-mO-EkU" sceneMemberID="viewController">
+                    <view key="view" id="9GN-Ps-8ZV">
+                        <rect key="frame" x="0.0" y="0.0" width="293" height="149"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCu-rP-yAI">
+                                <rect key="frame" x="17" y="28" width="75" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="push" title="Reset" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="S8b-Q2-Ydg">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
+                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jY3-Xa-2IE">
+                                <rect key="frame" x="18" y="112" width="96" height="19"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <sliderCell key="cell" state="on" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="above" sliderType="linear" id="GCf-ja-hXC"/>
+                            </slider>
+                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0jS-Ih-uq7">
+                                <rect key="frame" x="18" y="89" width="96" height="19"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <sliderCell key="cell" state="on" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="above" sliderType="linear" id="pWg-jf-26x"/>
+                            </slider>
+                        </subviews>
+                    </view>
+                </viewController>
+                <customObject id="IRT-E0-YF6" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="453.5" y="1262.5"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="NSActionTemplate" width="14" height="14"/>
+        <image name="NSAddTemplate" width="11" height="11"/>
+        <image name="NSBluetoothTemplate" width="7" height="14"/>
+        <image name="NSRemoveTemplate" width="11" height="11"/>
+        <image name="NSShareTemplate" width="11" height="16"/>
+    </resources>
 </document>
